--- a/doc/agile/v1/sprint_backlog_03.org
+++ b/doc/agile/v1/sprint_backlog_03.org
@@ -13,25 +13,26 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-28 Fri 16:43]
+#+CAPTION: Clock summary at [2017-07-28 Fri 23:40]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *23:23* |       |      | 100.0 |
+| *Total time*                                                                | *23:42* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 23:23   |       |      | 100.0 |
-| Active                                                                      |         | 23:23 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:19 |   1.4 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 3:06 |  13.3 |
+| Stories                                                                     | 23:42   |       |      | 100.0 |
+| Active                                                                      |         | 23:42 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:19 |   1.3 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 3:06 |  13.1 |
 | COMPLETED Create a tagging checklist                                        |         |       | 0:07 |   0.5 |
-| COMPLETED Tidy-up post-processing validation                                |         |       | 3:41 |  15.8 |
-| COMPLETED Allow logging during initialisation                               |         |       | 1:16 |   5.4 |
-| COMPLETED Refactor =yarn.dia=                                               |         |       | 1:39 |   7.1 |
-| COMPLETED Add meta-type support to yarn                                     |         |       | 9:34 |  40.9 |
-| COMPLETED Use the archetype locations repository in yarn                    |         |       | 1:16 |   5.4 |
-| STARTED Rename =meta_type= in JSON                                          |         |       | 0:19 |   1.4 |
-| STARTED Add canonical archetype support to yarn                             |         |       | 1:11 |   5.1 |
+| COMPLETED Tidy-up post-processing validation                                |         |       | 3:41 |  15.5 |
+| COMPLETED Allow logging during initialisation                               |         |       | 1:16 |   5.3 |
+| COMPLETED Refactor =yarn.dia=                                               |         |       | 1:39 |   7.0 |
+| COMPLETED Add meta-type support to yarn                                     |         |       | 9:34 |  40.4 |
+| COMPLETED Use the archetype locations repository in yarn                    |         |       | 1:16 |   5.3 |
+| STARTED Rename =meta_type= in JSON                                          |         |       | 0:19 |   1.3 |
+| STARTED Add canonical archetype support to yarn                             |         |       | 1:11 |   5.0 |
 | STARTED Move external module processing into yarn                           |         |       | 0:55 |   3.9 |
+| STARTED Create an exogenous model                                           |         |       | 0:19 |   1.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -331,6 +332,7 @@ re-insert all elements, because the IDs will change as part of this
 exercise.
 
 *** STARTED Create an exogenous model                                 :story:
+    CLOCK: [2017-07-28 Fri 23:21]--[2017-07-28 Fri 23:40] =>  0:19
 
 At present we are allowing the frontends to directly create
 intermediate models. However, this doesn't make a lot of sense: there
