--- a/doc/agile/v1/sprint_backlog_03.org
+++ b/doc/agile/v1/sprint_backlog_03.org
@@ -13,26 +13,26 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-29 Sat 18:01]
+#+CAPTION: Clock summary at [2017-07-29 Sat 18:26]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *25:36* |       |      | 100.0 |
+| *Total time*                                                                | *25:46* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 25:36   |       |      | 100.0 |
-| Active                                                                      |         | 25:36 |      | 100.0 |
+| Stories                                                                     | 25:46   |       |      | 100.0 |
+| Active                                                                      |         | 25:46 |      | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:19 |   1.2 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 3:06 |  12.1 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 3:06 |  12.0 |
 | COMPLETED Create a tagging checklist                                        |         |       | 0:07 |   0.5 |
-| COMPLETED Tidy-up post-processing validation                                |         |       | 3:41 |  14.4 |
+| COMPLETED Tidy-up post-processing validation                                |         |       | 3:41 |  14.3 |
 | COMPLETED Allow logging during initialisation                               |         |       | 1:16 |   4.9 |
 | COMPLETED Refactor =yarn.dia=                                               |         |       | 1:39 |   6.4 |
-| COMPLETED Add meta-type support to yarn                                     |         |       | 9:34 |  37.4 |
+| COMPLETED Add meta-type support to yarn                                     |         |       | 9:34 |  37.1 |
 | COMPLETED Use the archetype locations repository in yarn                    |         |       | 1:16 |   4.9 |
 | STARTED Rename =meta_type= in JSON                                          |         |       | 0:19 |   1.2 |
 | STARTED Add canonical archetype support to yarn                             |         |       | 1:11 |   4.6 |
 | STARTED Move external module processing into yarn                           |         |       | 0:55 |   3.6 |
-| STARTED Create an exogenous model                                           |         |       | 2:13 |   8.7 |
+| STARTED Create an exogenous model                                           |         |       | 2:23 |   9.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -332,6 +332,7 @@ re-insert all elements, because the IDs will change as part of this
 exercise.
 
 *** STARTED Create an exogenous model                                 :story:
+    CLOCK: [2017-07-29 Sat 18:16]--[2017-07-29 Sat 18:26] =>  0:10
     CLOCK: [2017-07-29 Sat 17:31]--[2017-07-29 Sat 18:01] =>  0:30
     CLOCK: [2017-07-29 Sat 13:45]--[2017-07-29 Sat 14:41] =>  0:56
     CLOCK: [2017-07-29 Sat 08:46]--[2017-07-29 Sat 09:14] =>  0:28
