--- a/doc/agile/v1/sprint_backlog_03.org
+++ b/doc/agile/v1/sprint_backlog_03.org
@@ -13,26 +13,26 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-30 Sun 11:12]
+#+CAPTION: Clock summary at [2017-07-30 Sun 11:30]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *26:35* |       |      | 100.0 |
+| *Total time*                                                                | *27:00* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 26:35   |       |      | 100.0 |
-| Active                                                                      |         | 26:35 |      | 100.0 |
+| Stories                                                                     | 27:00   |       |      | 100.0 |
+| Active                                                                      |         | 27:00 |      | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:19 |   1.2 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 3:06 |  11.7 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 3:06 |  11.5 |
 | COMPLETED Create a tagging checklist                                        |         |       | 0:07 |   0.4 |
-| COMPLETED Tidy-up post-processing validation                                |         |       | 3:41 |  13.9 |
-| COMPLETED Allow logging during initialisation                               |         |       | 1:16 |   4.8 |
-| COMPLETED Refactor =yarn.dia=                                               |         |       | 1:39 |   6.2 |
-| COMPLETED Add meta-type support to yarn                                     |         |       | 9:34 |  36.0 |
-| COMPLETED Use the archetype locations repository in yarn                    |         |       | 1:16 |   4.8 |
+| COMPLETED Tidy-up post-processing validation                                |         |       | 3:41 |  13.6 |
+| COMPLETED Allow logging during initialisation                               |         |       | 1:16 |   4.7 |
+| COMPLETED Refactor =yarn.dia=                                               |         |       | 1:39 |   6.1 |
+| COMPLETED Add meta-type support to yarn                                     |         |       | 9:34 |  35.4 |
+| COMPLETED Use the archetype locations repository in yarn                    |         |       | 1:16 |   4.7 |
 | STARTED Rename =meta_type= in JSON                                          |         |       | 0:19 |   1.2 |
-| STARTED Add canonical archetype support to yarn                             |         |       | 1:11 |   4.5 |
+| STARTED Add canonical archetype support to yarn                             |         |       | 1:11 |   4.4 |
 | STARTED Move external module processing into yarn                           |         |       | 0:55 |   3.4 |
-| STARTED Create an exogenous model                                           |         |       | 3:12 |  12.0 |
+| STARTED Create an exogenous model                                           |         |       | 3:37 |  13.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -332,6 +332,7 @@ re-insert all elements, because the IDs will change as part of this
 exercise.
 
 *** STARTED Create an exogenous model                                 :story:
+    CLOCK: [2017-07-30 Sun 11:05]--[2017-07-30 Sun 11:30] =>  0:25
     CLOCK: [2017-07-30 Sun 10:12]--[2017-07-30 Sun 11:01] =>  0:49
     CLOCK: [2017-07-29 Sat 18:16]--[2017-07-29 Sat 18:26] =>  0:10
     CLOCK: [2017-07-29 Sat 17:31]--[2017-07-29 Sat 18:01] =>  0:30
