--- a/doc/agile/v1/sprint_backlog_03.org
+++ b/doc/agile/v1/sprint_backlog_03.org
@@ -13,26 +13,26 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-30 Sun 11:30]
+#+CAPTION: Clock summary at [2017-07-30 Sun 18:52]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *27:00* |       |      | 100.0 |
+| *Total time*                                                                | *27:49* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 27:00   |       |      | 100.0 |
-| Active                                                                      |         | 27:00 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:19 |   1.2 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 3:06 |  11.5 |
+| Stories                                                                     | 27:49   |       |      | 100.0 |
+| Active                                                                      |         | 27:49 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:19 |   1.1 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 3:06 |  11.1 |
 | COMPLETED Create a tagging checklist                                        |         |       | 0:07 |   0.4 |
-| COMPLETED Tidy-up post-processing validation                                |         |       | 3:41 |  13.6 |
-| COMPLETED Allow logging during initialisation                               |         |       | 1:16 |   4.7 |
-| COMPLETED Refactor =yarn.dia=                                               |         |       | 1:39 |   6.1 |
-| COMPLETED Add meta-type support to yarn                                     |         |       | 9:34 |  35.4 |
-| COMPLETED Use the archetype locations repository in yarn                    |         |       | 1:16 |   4.7 |
-| STARTED Rename =meta_type= in JSON                                          |         |       | 0:19 |   1.2 |
-| STARTED Add canonical archetype support to yarn                             |         |       | 1:11 |   4.4 |
-| STARTED Move external module processing into yarn                           |         |       | 0:55 |   3.4 |
-| STARTED Create an exogenous model                                           |         |       | 3:37 |  13.4 |
+| COMPLETED Tidy-up post-processing validation                                |         |       | 3:41 |  13.2 |
+| COMPLETED Allow logging during initialisation                               |         |       | 1:16 |   4.6 |
+| COMPLETED Refactor =yarn.dia=                                               |         |       | 1:39 |   5.9 |
+| COMPLETED Add meta-type support to yarn                                     |         |       | 9:34 |  34.4 |
+| COMPLETED Use the archetype locations repository in yarn                    |         |       | 1:16 |   4.6 |
+| STARTED Rename =meta_type= in JSON                                          |         |       | 0:19 |   1.1 |
+| STARTED Add canonical archetype support to yarn                             |         |       | 1:11 |   4.3 |
+| STARTED Move external module processing into yarn                           |         |       | 0:55 |   3.3 |
+| STARTED Create an exogenous model                                           |         |       | 4:26 |  15.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -332,6 +332,9 @@ re-insert all elements, because the IDs will change as part of this
 exercise.
 
 *** STARTED Create an exogenous model                                 :story:
+    CLOCK: [2017-07-30 Sun 18:38]--[2017-07-30 Sun 18:52] =>  0:14
+    CLOCK: [2017-07-30 Sun 18:20]--[2017-07-30 Sun 18:37] =>  0:17
+    CLOCK: [2017-07-30 Sun 13:25]--[2017-07-30 Sun 13:43] =>  0:18
     CLOCK: [2017-07-30 Sun 11:05]--[2017-07-30 Sun 11:30] =>  0:25
     CLOCK: [2017-07-30 Sun 10:12]--[2017-07-30 Sun 11:01] =>  0:49
     CLOCK: [2017-07-29 Sat 18:16]--[2017-07-29 Sat 18:26] =>  0:10
