--- a/doc/agile/v1/sprint_backlog_03.org
+++ b/doc/agile/v1/sprint_backlog_03.org
@@ -13,26 +13,26 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-30 Sun 18:52]
+#+CAPTION: Clock summary at [2017-07-30 Sun 18:56]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *27:49* |       |      | 100.0 |
+| *Total time*                                                                | *27:52* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 27:49   |       |      | 100.0 |
-| Active                                                                      |         | 27:49 |      | 100.0 |
+| Stories                                                                     | 27:52   |       |      | 100.0 |
+| Active                                                                      |         | 27:52 |      | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:19 |   1.1 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 3:06 |  11.1 |
 | COMPLETED Create a tagging checklist                                        |         |       | 0:07 |   0.4 |
 | COMPLETED Tidy-up post-processing validation                                |         |       | 3:41 |  13.2 |
-| COMPLETED Allow logging during initialisation                               |         |       | 1:16 |   4.6 |
+| COMPLETED Allow logging during initialisation                               |         |       | 1:16 |   4.5 |
 | COMPLETED Refactor =yarn.dia=                                               |         |       | 1:39 |   5.9 |
-| COMPLETED Add meta-type support to yarn                                     |         |       | 9:34 |  34.4 |
-| COMPLETED Use the archetype locations repository in yarn                    |         |       | 1:16 |   4.6 |
+| COMPLETED Add meta-type support to yarn                                     |         |       | 9:34 |  34.3 |
+| COMPLETED Use the archetype locations repository in yarn                    |         |       | 1:16 |   4.5 |
 | STARTED Rename =meta_type= in JSON                                          |         |       | 0:19 |   1.1 |
-| STARTED Add canonical archetype support to yarn                             |         |       | 1:11 |   4.3 |
+| STARTED Add canonical archetype support to yarn                             |         |       | 1:11 |   4.2 |
 | STARTED Move external module processing into yarn                           |         |       | 0:55 |   3.3 |
-| STARTED Create an exogenous model                                           |         |       | 4:26 |  15.9 |
+| STARTED Create an exogenous model                                           |         |       | 4:29 |  16.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -332,6 +332,7 @@ re-insert all elements, because the IDs will change as part of this
 exercise.
 
 *** STARTED Create an exogenous model                                 :story:
+    CLOCK: [2017-07-30 Sun 18:53]--[2017-07-30 Sun 18:56] =>  0:03
     CLOCK: [2017-07-30 Sun 18:38]--[2017-07-30 Sun 18:52] =>  0:14
     CLOCK: [2017-07-30 Sun 18:20]--[2017-07-30 Sun 18:37] =>  0:17
     CLOCK: [2017-07-30 Sun 13:25]--[2017-07-30 Sun 13:43] =>  0:18
