--- a/doc/agile/v1/sprint_backlog_03.org
+++ b/doc/agile/v1/sprint_backlog_03.org
@@ -13,26 +13,26 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-30 Sun 20:39]
+#+CAPTION: Clock summary at [2017-08-01 Tue 20:34]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *28:47* |       |      | 100.0 |
+| *Total time*                                                                | *30:18* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 28:47   |       |      | 100.0 |
-| Active                                                                      |         | 28:47 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:19 |   1.1 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 3:06 |  10.8 |
+| Stories                                                                     | 30:18   |       |      | 100.0 |
+| Active                                                                      |         | 30:18 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:19 |   1.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 3:06 |  10.2 |
 | COMPLETED Create a tagging checklist                                        |         |       | 0:07 |   0.4 |
-| COMPLETED Tidy-up post-processing validation                                |         |       | 3:41 |  12.8 |
-| COMPLETED Allow logging during initialisation                               |         |       | 1:16 |   4.4 |
-| COMPLETED Refactor =yarn.dia=                                               |         |       | 1:39 |   5.7 |
-| COMPLETED Add meta-type support to yarn                                     |         |       | 9:34 |  33.2 |
-| COMPLETED Use the archetype locations repository in yarn                    |         |       | 1:16 |   4.4 |
-| STARTED Rename =meta_type= in JSON                                          |         |       | 0:19 |   1.1 |
-| STARTED Add canonical archetype support to yarn                             |         |       | 1:11 |   4.1 |
-| STARTED Move external module processing into yarn                           |         |       | 0:55 |   3.2 |
-| STARTED Create an exogenous model                                           |         |       | 5:24 |  18.8 |
+| COMPLETED Tidy-up post-processing validation                                |         |       | 3:41 |  12.2 |
+| COMPLETED Allow logging during initialisation                               |         |       | 1:16 |   4.2 |
+| COMPLETED Refactor =yarn.dia=                                               |         |       | 1:39 |   5.4 |
+| COMPLETED Add meta-type support to yarn                                     |         |       | 9:34 |  31.6 |
+| COMPLETED Use the archetype locations repository in yarn                    |         |       | 1:16 |   4.2 |
+| STARTED Rename =meta_type= in JSON                                          |         |       | 0:19 |   1.0 |
+| STARTED Add canonical archetype support to yarn                             |         |       | 1:11 |   3.9 |
+| STARTED Move external module processing into yarn                           |         |       | 0:55 |   3.0 |
+| STARTED Create an exogenous model                                           |         |       | 6:55 |  22.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -332,6 +332,7 @@ re-insert all elements, because the IDs will change as part of this
 exercise.
 
 *** STARTED Create an exogenous model                                 :story:
+    CLOCK: [2017-08-01 Tue 19:03]--[2017-08-01 Tue 20:34] =>  1:31
     CLOCK: [2017-07-30 Sun 20:28]--[2017-07-30 Sun 20:39] =>  0:11
     CLOCK: [2017-07-30 Sun 20:09]--[2017-07-30 Sun 20:27] =>  0:18
     CLOCK: [2017-07-30 Sun 18:57]--[2017-07-30 Sun 19:23] =>  0:26
@@ -393,6 +394,19 @@ Steps:
 - convert scribble group into annotation group.
 - process element annotation.
 - process attribute annotations, if stateful.
+
+*** Use shared pointers in all models                                 :story:
+
+We need to start using unique pointers in exogenous model, and shared
+pointers in intermediate model. We should transfer the ownership as we
+go along, making the transformers/adapters mutable.
+
+*** Update repository in yarn.dia to use pointers                     :story:
+
+At present we are using a three-way map from dia object (child) to dia
+object (parent) and then from parent to name and then from name to
+element. Once the models have pointers we can simply map dia object
+directly to parent (and module).
 
 *** Enable kernel directories trait is on quilt                       :story:
 
